fix sideMenu width on mobile && fix the height of the main container

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+*,*:after, *:before{
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+}
+
 .App {
   text-align: center;
-  /* min-width: 100vw; */
+  max-width: 100vw;
   min-height: 100vh;
 }
 
@@ -46,7 +53,7 @@
 
 .items::-webkit-scrollbar{
   width: 5px ;
-  background-color: #1f2937;
+  background-color: transparent;
 }
 
 .items::-webkit-scrollbar-thumb{
@@ -56,6 +63,20 @@
 
 .items:hover::-webkit-scrollbar-thumb{
   background-color: #334155;
+}
+
+.listsCont::-webkit-scrollbar{
+  height: 8px ;
+  background-color: #374151db;
+}
+
+.listsCont::-webkit-scrollbar-thumb{
+  background-color: #334155;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: #1f2937;
 }
 
 @keyframes App-logo-spin {
